--- a/src/components/BannerMessage/BannerMessage.css
+++ b/src/components/BannerMessage/BannerMessage.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     padding: 10px;
-    background-color: #f5f5f5;
+    background-color: #f5f5f5ea;
     box-shadow:inset 0 -1px 0 0 #e5e5e5;
     /* min-height: 58px; */
 }
@@ -10,7 +10,7 @@
     padding: 10px;
 }
 .message {
-    font-size: 12px;
+    font-size: 12px; 
 }
 .message__a {
     color: #111;
@@ -18,3 +18,6 @@
     font-weight: 500;
     text-decoration: underline;
 }
+ .green-text{
+    color: #e5e5e5;
+ }
